--- a/MaxStatsMCU/platformio.ini
+++ b/MaxStatsMCU/platformio.ini
@@ -12,4 +12,7 @@
 platform = teensy
 board = teensy31
 framework = arduino
-lib_deps = adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
+lib_deps = 
+	Wire
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
+	adafruit/Adafruit BusIO@^1.5.0
