--- a/MaxStatsMCU/platformio.ini
+++ b/MaxStatsMCU/platformio.ini
@@ -16,3 +16,12 @@ lib_deps =
 	Wire
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
 	adafruit/Adafruit BusIO@^1.5.0
+
+[env:promicro]
+platform = atmelavr
+board = leonardo
+framework = arduino
+lib_deps = 
+	Wire
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
+	adafruit/Adafruit BusIO@^1.5.0
