Add "connection waiting" screen

--- a/MaxStatsDesktop/MaxStatsDesktop.csproj
+++ b/MaxStatsDesktop/MaxStatsDesktop.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BF8E3005-16CD-4B8D-B422-70E70D905A53}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>MaxStatsDesktop</RootNamespace>
     <AssemblyName>MaxStatsDesktop</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
