--- a/MaxStatsMCU/platformio.ini
+++ b/MaxStatsMCU/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy31]
+[env:teensy32]
 platform = teensy
 board = teensy31
 framework = arduino
@@ -20,6 +20,15 @@ lib_deps =
 [env:promicro]
 platform = atmelavr
 board = leonardo
+framework = arduino
+lib_deps = 
+	Wire
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
+	adafruit/Adafruit BusIO@^1.5.0
+
+[env:teensy36]
+platform = teensy
+board = teensy36
 framework = arduino
 lib_deps = 
 	Wire
