--- a/MCU/platformio.ini
+++ b/MCU/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	Wire
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
 	adafruit/Adafruit BusIO@^1.5.0
+build_flags = -D USB_EVERYTHING
 
 [env:promicro]
 platform = atmelavr
