--- a/MCU/platformio.ini
+++ b/MCU/platformio.ini
@@ -24,8 +24,13 @@ board = leonardo
 framework = arduino
 lib_deps = 
 	Wire
+	Keyboard
+	Bounce2
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
 	adafruit/Adafruit BusIO@^1.5.0
+lib_ignore = ST7735_t3
+board_build.usb_product = "MaxStats"
+board_vendor = "FriendTeamInc."
 
 [env:teensy36]
 platform = teensy
@@ -35,3 +40,4 @@ lib_deps =
 	Wire
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.6.0
 	adafruit/Adafruit BusIO@^1.5.0
+build_flags = -D USB_EVERYTHING
